Published multiple files

--- a/src/site/notes/z_Atomy/0-9/⛉.md
+++ b/src/site/notes/z_Atomy/0-9/⛉.md
@@ -2,5 +2,5 @@
 {"dg-publish":true,"dg-permalink":"Střední brnění","permalink":"/Střední brnění/"}
 ---
 
-### Střední brnění = Pouze kostky!
+### ⛉ = Střední brnění = Pouze kostky!
 Monstra se středním brněním ignorují všechny bonusy poškození. Utrží poškození pouze z hodu kostek.
