--- a/src/site/notes/z_Atomy/0-9/⛊.md
+++ b/src/site/notes/z_Atomy/0-9/⛊.md
@@ -2,5 +2,5 @@
 {"dg-publish":true,"dg-permalink":"Těžké brnění","permalink":"/Těžké brnění/"}
 ---
 
-### Těžké brnění = Polovina kostek!
+### ⛊ = Těžké brnění = Kostky/2
 Monstra s těžkým brněním ignorují bonusy poškození a utrží polovinu poškození z hodu kostek (zaokrouhleno nahoru).
