--- a/src/site/notes/z_Atomy/0-9/👍.md
+++ b/src/site/notes/z_Atomy/0-9/👍.md
@@ -2,7 +2,7 @@
 {"dg-publish":true,"dg-permalink":"Výhoda","permalink":"/Výhoda/"}
 ---
 
-## Výhoda (👍)
+## 👍 = Výhoda
 Pokud vám okolnosti výrazně **přejí**, může vám [[z_Atomy/0-9/🧙🏼‍♂️\|🧙🏼‍♂️]] umožnit provést **hod s výhodou**. 
 Za každou výhodu hoďte 1 další kostku a **odstraňte 1 nejnižší výsledek**.
 
