--- a/src/site/notes/z_Atomy/0-9/👎.md
+++ b/src/site/notes/z_Atomy/0-9/👎.md
@@ -2,7 +2,7 @@
 {"dg-publish":true,"dg-permalink":"Nevýhoda","permalink":"/Nevýhoda/"}
 ---
 
-## Nevýhoda (👎)
+## 👎 = Nevýhoda
 Pokud vám okolnosti výrazně **nepřejí**, může vám [[z_Atomy/0-9/🧙🏼‍♂️\|🧙🏼‍♂️]] umožnit provést **hod s nevýhodou**.
 Za každou nevýhodu hoďte 1 další kostku a **odstraňte 1 nejvyšší výsledek**.
 
