--- a/src/site/notes/z_Atomy/0-9/💀.md
+++ b/src/site/notes/z_Atomy/0-9/💀.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/z-atomy/0-9//","title":"Smrt"}
+{"dg-publish":true,"dg-permalink":"Smrt","permalink":"/Smrt/"}
 ---
 
 # 💀 = Smrt
