Published multiple files

--- a/src/site/notes/z_Atomy/0-9/❓.md
+++ b/src/site/notes/z_Atomy/0-9/❓.md
@@ -5,7 +5,7 @@
 # ❓ = Kontrola Dovedností
 Při provádění něčeho náročného (přesvědčování [[z_Atomy/N/NPC\|NPC]], odhalení skrytého tvora, odemykání zámku atd.) může [[z_Atomy/0-9/🧙🏼‍♂️\|🧙🏼‍♂️]] požádat hrdinu o provedení **kontroly dovednosti**. 
 
-Pro provedení **KD** hoďte **1k20** a přidejte své bonusy dané [[z_Atomy/0-9/⚙️\|⚙️]] k výsledku. Tento výsledek se porovná s [[z_Atomy/0-9/📶\|📶]], která musí být dorovnána pro **úspěch** a když je hodnota menší jedná se o **neúspěch**.
+Pro provedení **KD** hoďte **1k20** a přidejte své bonus dané [[z_Atomy/0-9/⚙️\|⚙️]] k výsledku. Tento výsledek se porovná s [[z_Atomy/0-9/📶\|📶]], která musí být dorovnána pro **úspěch** a když je hodnota menší jedná se o **neúspěch**.
 [[z_Atomy/0-9/📶\|📶]] určuje [[z_Atomy/0-9/🧙🏼‍♂️\|🧙🏼‍♂️]] a bude se lišit v závislosti na tom, co se pokoušíte udělat.
 
 > [!FAQ]- Pro [[z_Atomy/0-9/🧙🏼‍♂️\|🧙🏼‍♂️]]
