--- a/src/site/notes/z_Atomy/0-9/🎯.md
+++ b/src/site/notes/z_Atomy/0-9/🎯.md
@@ -2,5 +2,5 @@
 {"dg-publish":true,"dg-permalink":"Obratnost","permalink":"/Obratnost/"}
 ---
 
-## OBRATNOST (🎯)
- Ovlivňuje poškození některých zbraní a schopností, [[z_Atomy/B/Brnění\|Brnění]], [[z_Atomy/0-9/⚙️\|⚙️]] [[z_Atomy/P/Plížení (🎯)\|Plížení (🎯)]] a [[z_Atomy/Z/Zručnost (🎯)\|Zručnost (🎯)]] a [[z_Atomy/0-9/❗\|❗]] [[z_Atomy/0-9/🎯\|🎯]].
+## 🎯 = OBRATNOST
+ Ovlivňuje poškození některých zbraní a schopností, [[z_Atomy/B/Brnění\|Brnění]], [[z_Atomy/0-9/⚙️\|⚙️]] [[z_Atomy/P/Plížení (🎯)\|Plížení (🎯)]] a [[z_Atomy/Z/Zručnost (🎯)\|Zručnost (🎯)]] a [[z_Atomy/0-9/❗\|❗]][[z_Atomy/0-9/🎯\|🎯]].
