--- a/src/site/notes/z_Atomy/0-9/🏹.md
+++ b/src/site/notes/z_Atomy/0-9/🏹.md
@@ -3,4 +3,4 @@
 ---
 
 ## 🏹 = Dostřel
-Pro [[z_Atomy/0-9/⚔️\|⚔️]] **na dálku**. Pokud se vedle Vás nachází nepřítel, Vaše útoky na dálku mají ([[z_Atomy/0-9/👎\|👎]]).
+Pro [[z_Atomy/0-9/⚔️\|⚔️]] **na dálku** a vybrané schopnosti a kouzla. Pokud se vedle Vás nachází nepřítel, Vaše útoky na dálku mají [[z_Atomy/0-9/👎\|👎]].
