--- a/src/site/notes/z_Atomy/0-9/👊.md
+++ b/src/site/notes/z_Atomy/0-9/👊.md
@@ -3,4 +3,4 @@
 ---
 
 ## 👊 = Dosah
-Pro [[z_Atomy/0-9/⚔️\|⚔️]] **na blízko**. Jak daleko může být cíl, aby byl zasažen.
+Pro [[z_Atomy/0-9/⚔️\|⚔️]] **na blízko** a vybrané schopnosti a kouzla. Jak daleko může být cíl, aby byl zasažen.
