--- a/src/site/notes/z_Atomy/0-9/❗.md
+++ b/src/site/notes/z_Atomy/0-9/❗.md
@@ -10,7 +10,7 @@ Každý záchranný hod má [[z_Atomy/0-9/📶\|📶]], která musí být dorovn
 
 **Přirozená 20 vždy znamená úspěch** bez ohledu na další modifikátory.
 
-Efekty ❗ ignorují [[z_Atomy/0-9/⛉⛊\|⛉⛊]], **nemohou** udělit [[z_Atomy/0-9/💥\|💥]] a ani **nemohou** **minout**.
+Efekty ❗ ignorují [[z_Atomy/0-9/⛉⛊\|⛉⛊]], **nemohou** udělit [[z_Atomy/0-9/💥\|💥]] a **nemohou** **minout**.
 
 - ❗[[z_Atomy/0-9/💪\|💪]]. Používá se pro [[z_Atomy/P/Pády a Nucený pohyb\|Pády a Nucený pohyb]], otravu, odolání extrémním teplotám nebo schopnosti udržet se na nohou během vichřice.
 - ❗[[z_Atomy/0-9/🎯\|🎯]]. Používá se, když potřebujete skočit do úkrytu před explozí, udržet se na nohou při běhu po zledovatělé podlaze nebo při balancování na okraji útesu.
