--- a/src/site/notes/z_Atomy/0-9/💖.md
+++ b/src/site/notes/z_Atomy/0-9/💖.md
@@ -4,8 +4,9 @@
 
 # 💖 = Body výdrže
 
-Vaše **Body Výdrže** představují vaši schopnost přijímat poškození a jít dál. Při přijímání poškození se Vaše 💖 snižují. Když klesnete na **0** 💖, získáte 1 [[z_Atomy/0-9/❤️‍🩹\|❤️‍🩹]] a stav [[z_Atomy/0-9/🩸\|🩸]].
+Vaše **Body Výdrže** představují vaši schopnost přijímat poškození a jít dál. Při přijímání poškození se Vaše 💖 snižují. Když klesnete na **0** 💖, utržíte **1** [[z_Atomy/0-9/❤️‍🩹\|❤️‍🩹]] a začnete [[z_Atomy/0-9/🩸\|🩸]].
 
 Počáteční **Body Výdrže** určíte:
-- Max. hodnota [[z_Atomy/K/🟥\|🟥]] Vašeho [[2 Důležité/e1_Povolání\|Povolání]] plus hod [[z_Atomy/K/🟥\|🟥]] s [[z_Atomy/0-9/👍\|👍]] nebo 
+- Max. hodnota [[z_Atomy/K/🟥\|🟥]] Vašeho [[2 Důležité/e1_Povolání\|Povolání]] plus hod **1** [[z_Atomy/K/🟥\|🟥]] s [[z_Atomy/0-9/👍\|👍]] 
+*nebo*
 - Použijete počáteční hodnotu 💖 Vašeho [[2 Důležité/e1_Povolání\|Povolání]].
