Published multiple files

--- a/src/site/notes/z_Atomy/0-9/🪫.md
+++ b/src/site/notes/z_Atomy/0-9/🪫.md
@@ -5,4 +5,4 @@
 # 🪫 = Krátký odpočinek  
 Krátké odpočinky vyžadují alespoň 15 minut na to, abyste popadli dech a ošetřili své rány, ale může to být také celá noc strávená tábořením pod hvězdami. 
 
-Po dokončení krátkého odpočinku můžete utratit [[z_Atomy/K/🟥\|🟥]] a získat zpět [[z_Atomy/0-9/💖\|💖]] rovné součtu, který hodíte. Pokud odpočíváte alespoň 6 hodin s jídlem a spánkem, házíte kostky života s [[z_Atomy/0-9/👍\|👍]].
+Po dokončení krátkého odpočinku můžete utratit [[z_Atomy/0-9/🟥\|🟥]] a získat zpět [[z_Atomy/0-9/💖\|💖]] rovné součtu, který hodíte. Pokud odpočíváte alespoň 6 hodin s jídlem a spánkem, házíte kostky života s [[z_Atomy/0-9/👍\|👍]].
