Published multiple files

--- a/src/site/notes/z_Atomy/0-9/♎.md
+++ b/src/site/notes/z_Atomy/0-9/♎.md
@@ -3,4 +3,7 @@
 ---
 
 ## ♎ = Kostky Soudu
-Kdykoli na Vás zaútočí, získáte **1k8 Kostku soudu**. Vždy když provedete [[z_Atomy/0-9/⚔️\|⚔️]] na blízko, přidejte všechny své **Kostky soudu** k útoku. Pokud útok zasáhne, způsobíte navíc **zářivé poškození** rovné vašim **Kostkám soudu**. Maximální počet **Kostek soudu** které můžete mít, je roven Vaší [[z_Atomy/0-9/❤️‍🔥\|❤️‍🔥]].
+Kdykoli na Vás zaútočí, získáte **Kostku soudu** (**1k8**). Vždy když provedete [[z_Atomy/0-9/⚔️\|⚔️]] na blízko, přidejte všechny své **Kostky soudu** k útoku. Pokud útok zasáhne, způsobíte navíc **zářivé poškození** rovné vašim **Kostkám soudu**. 
+Maximální počet **Kostek soudu** které můžete mít, je roven Vaší [[z_Atomy/0-9/❤️‍🔥\|❤️‍🔥]].
+
+Velikost je v základu **k8** a zvyšuje se na **určitých** [[z_Atomy/L/LVL\|LVL]].
