--- a/src/site/notes/z_Atomy/0-9/♐.md
+++ b/src/site/notes/z_Atomy/0-9/♐.md
@@ -3,6 +3,6 @@
 ---
 
 # ♐ = Kostky Války
-Kdykoli se hází [[z_Atomy/0-9/🏁\|🏁]], získáte **Válečné kostky** rovné vaší ([[z_Atomy/0-9/📖\|📖]]). Jednou za útok můžete utratit jednu **Válečnou Kostku** pro provedení [[z_Atomy/V/Válečné Taktiky\|Válečné Taktiky]].
+Kdykoli se hází [[z_Atomy/0-9/🏁\|🏁]], získáte **Kostky Války** rovné Vaší [[z_Atomy/0-9/📖\|📖]]. Jednou za útok můžete utratit jednu **Válečnou Kostku** pro provedení [[z_Atomy/V/Válečné Taktiky\|Válečné Taktiky]].
 
 Velikost je v základu **k6** a zvyšuje se na **určitých** [[z_Atomy/L/LVL\|LVL]].
