--- a/src/site/notes/z_Atomy/0-9/♈.md
+++ b/src/site/notes/z_Atomy/0-9/♈.md
@@ -3,7 +3,7 @@
 ---
 
 # ♈ = Kostky Vzteku
-Pokud získáte **Kostku Vzteku** (1k6), hoďte jí a hodnotu si odložte stranou. 
-Tato hodnota se přidává ke **každému [[z_Atomy/0-9/💪\|💪]] útoku**. Maximální počet [[z_Atomy/0-9/♈\|♈]] je roven Vašemu [[z_Atomy/L/LVL\|LVL]] a zmizí, když Vaše **Zuřivost** skončí.
+Pokud získáte **Kostku Vzteku** (**1k6**), hoďte jí a hodnotu si odložte stranou. Tato hodnota se přidává ke **každému [[z_Atomy/0-9/💪\|💪]] útoku**. 
+Maximální počet **Kostek Vzteku** je roven Vašemu [[z_Atomy/L/LVL\|LVL]] a zmizí, když Vaše **Zuřivost** skončí.
 
 Jak získáváte [[z_Atomy/U/Úrovně Berserka\|Úrovně Berserka]], tak Vaše kostky rostou. *Úrovně 2, 5, 9, 13, 17.*
