--- a/src/site/notes/z_Atomy/0-9/❗.md
+++ b/src/site/notes/z_Atomy/0-9/❗.md
@@ -3,16 +3,16 @@
 ---
 
 # ❗ = Záchranný hod
-Když svět hry ovlivňuje hrdiny, některá kouzla, schopnosti a jiné nebezpečí testují fyzickou zdatnost nebo odolnost (❗[[z_Atomy/0-9/💪\|💪]]), rychlost nebo rovnováhu (❗[[z_Atomy/0-9/🎯\|🎯]]) nebo duševní odolnost (❗[[z_Atomy/0-9/🧠\|🧠]]). 
-
-**Pro provedení záchranného hodu hoďte 1k20 a přidejte modifikace**. 
-Každý záchranný hod má [[z_Atomy/0-9/📶\|📶]], který musí být dorovnán hodem a modifikátory pro **úspěch**, jinak se jedná o **neúspěch**. Hod "přirozené" 20 vždy uspěje! Bytost si může záměrně neuspět.
-
-Efekty ❗ ignorují [[z_Atomy/0-9/⛉⛊\|⛉⛊]], **nemohou** udělit [[z_Atomy/0-9/💥\|💥]] a **nemohou** **minout**.
+Když svět hry ovlivňuje hrdiny, **pro provedení záchranného hodu hoďte 1k20 a přidejte modifikace**. 
+Každý záchranný hod má [[z_Atomy/0-9/📶\|📶]], který musí být dorovnán hodem a modifikátory pro **úspěch**, jinak se jedná o **neúspěch**. Hod "*přirozené*" 20 vždy uspěje! Bytost si může záměrně neuspět.
 
 - ❗[[z_Atomy/0-9/💪\|💪]] 
-	- Používá se pro [[z_Atomy/P/Pády a Nucený pohyb\|Pády a Nucený pohyb]], otravu, odolání extrémním teplotám nebo schopnosti udržet se na nohou během vichřice.
+	- Používá se pro [[z_Atomy/P/Pády a Nucený pohyb\|Pády a Nucený pohyb]], [[z_Atomy/O/Otráven\|Otrávení]], odolání extrémním teplotám nebo schopnosti udržet se na nohou během vichřice.
 - ❗[[z_Atomy/0-9/🎯\|🎯]] 
-	- Používá se, když potřebujete skočit do úkrytu před explozí, udržet se na nohou při běhu po zledovatělé podlaze nebo při balancování na okraji útesu.
-- ❗[[z_Atomy/0-9/🧠\|🧠]]
-	- (Vyšší hodnota z [[z_Atomy/0-9/📖\|📖]]/[[z_Atomy/0-9/❤️‍🔥\|❤️‍🔥]]). Používá se, když potřebujete odolat účinkům působící na mysl, prohlédnout iluze, odolat stavům [[z_Atomy/O/Očarován\|Očarován]], [[z_Atomy/V/Vystrašen\|Vystrašen]] atd.
+	- Používá se, když je zkoušena Vaše hbitost a obratnost. Uskočení do úkrytu před explozí, udržení se na nohou při běhu po zledovatělé podlaze nebo při balancování na okraji útesu.
+- ❗[[z_Atomy/0-9/📖\|📖]]
+	- Používá se, když je zkoušena Vaše chytrost. Pomáhá prohlédnout iluze a triky.
+- ❗[[z_Atomy/0-9/❤️‍🔥\|❤️‍🔥]]
+	- Používá se, když je zkoušena Vaše odhodlanost, odvaha a osobnost. Pomáhá odolat [[z_Atomy/O/Očarován\|Očarování]] a [[z_Atomy/V/Vystrašen\|Vystrašení]].
+
+Efekty ❗ ignorují [[z_Atomy/0-9/⛉⛊\|⛉⛊]], **nemohou** udělit [[z_Atomy/0-9/💥\|💥]] a **nemohou** **minout**.
