Published multiple files

--- a/src/site/notes/z_Atomy/0-9/⏩.md
+++ b/src/site/notes/z_Atomy/0-9/⏩.md
@@ -1,7 +1,7 @@
 ---
-{"dg-publish":true,"dg-permalink":"Body Disciplíny","permalink":"/Body Disciplíny/"}
+{"dg-publish":true,"dg-permalink":"Body Vánku","permalink":"/Body Vánku/"}
 ---
 
-# ⏩ = Body Disciplíny
-Když se hází [[z_Atomy/0-9/🏁\|🏁]], získáte [[z_Atomy/0-9/🎯\|🎯]] Bodů rychlosti ([[z_Atomy/0-9/⏩\|⏩]]). 
-Můžete utratit 1[[z_Atomy/0-9/⏩\|⏩]]/[[z_Atomy/K/Kolo\|Kolo]] pro jeden [[z_Atomy/D/Výbuch rychlosti\|Výbuch rychlosti]] zdarma.
+# ⏩ = Body Vánku
+Když se hází [[z_Atomy/0-9/🏁\|🏁]], získáte [[z_Atomy/0-9/🎯\|🎯]] **Bodů vánku** ([[z_Atomy/0-9/⏩\|⏩]]). 
+Můžete utratit 1[[z_Atomy/0-9/⏩\|⏩]]/[[z_Atomy/K/Kolo\|Kolo]] pro jeden [[z_Atomy/D/Výbuch rychlosti\|Výbuch rychlosti]] *zdarma* (**0** [[z_Atomy/A/AKCE\|Akcí]]).
