--- a/src/site/notes/z_Atomy/0-9/🏹.md
+++ b/src/site/notes/z_Atomy/0-9/🏹.md
@@ -3,4 +3,6 @@
 ---
 
 ## 🏹 = Dostřel
-Pro [[z_Atomy/0-9/⚔️\|⚔️]] **na dálku** a vybrané schopnosti a kouzla. Pokud se vedle Vás nachází nepřítel, Vaše útoky na dálku mají [[z_Atomy/0-9/👎\|👎]].
+Pro [[z_Atomy/0-9/⚔️\|⚔️]]/[[z_Atomy/0-9/✨\|✨]] **na dálku** a vybrané schopnosti. 
+Pokud se vedle Vás nachází nepřítel, Vaše [[z_Atomy/0-9/⚔️\|⚔️]]/[[z_Atomy/0-9/✨\|✨]] **na dálku** mají [[z_Atomy/0-9/👎\|👎]].
+Pokud cílíte na nepřítele mimo Váš **dostřel**, přidejte 1[[z_Atomy/0-9/👎\|👎]] za každé 2 metry.
