Published multiple files

--- a/src/site/notes/z_Atomy/0-9/♐.md
+++ b/src/site/notes/z_Atomy/0-9/♐.md
@@ -6,3 +6,8 @@
 Kdykoli se hází [[z_Atomy/0-9/🏁\|🏁]], získáte **Kostky Války** rovné Vaší [[z_Atomy/0-9/📖\|📖]]. Jednou za [[z_Atomy/0-9/⚔️\|⚔️]] můžete utratit jednu **Válečnou Kostku** pro provedení [[z_Atomy/V/Válečné Taktiky\|Válečné Taktiky]].
 
 Velikost je v základu **k6** a zvyšuje se na **určitých** [[z_Atomy/L/LVL\|LVL]].
+[[z_Atomy/L/LVL\|LVL]] 4 - k6
+[[z_Atomy/L/LVL\|LVL]] 5 - k8
+[[z_Atomy/L/LVL\|LVL]] 9 - k10
+[[z_Atomy/L/LVL\|LVL]] 13 - k12
+[[z_Atomy/L/LVL\|LVL]] 17 - k20
