--- a/src/site/notes/z_Atomy/0-9/❇️.md
+++ b/src/site/notes/z_Atomy/0-9/❇️.md
@@ -3,6 +3,12 @@
 ---
 
 # ❇️=Nabití Lovecké horečky
+V základu získáte +1[[z_Atomy/0-9/❇️\|❇️]], když:
+- se hází [[z_Atomy/0-9/🏁\|🏁]]
+- [[z_Atomy/0-9/⚔️\|⚔️]] na [[z_Atomy/K/Kořist\|Kořist]] útokem na blízko
+- Vaše [[z_Atomy/K/Kořist\|Kořist]] zemře
+
 Můžete mít neomezený počet ❇️. 
 Každá schopnost [[z_Atomy/L/Lovecká horečka\|Lovecké horečky]] stojí **1[[z_Atomy/0-9/❇️\|❇️]]** a **nelze jimi minout**.
-Když používáte schopnost **Lovecké horečky**, nemůžete generovat nová [[z_Atomy/0-9/❇️\|❇️]]. Nabití zmizí na konci [[z_Atomy/S/Střetnutí\|Střetnutí]].
+Když používáte schopnost **Lovecké horečky**, nemůžete generovat nová [[z_Atomy/0-9/❇️\|❇️]]. 
+Nabití zmizí na konci [[z_Atomy/S/Střetnutí\|Střetnutí]].
