--- a/src/site/notes/z_Atomy/0-9/🔀.md
+++ b/src/site/notes/z_Atomy/0-9/🔀.md
@@ -3,4 +3,4 @@
 ---
 
 # 🔀 = Nabití Koordinovaného útoku!
-Maximální počet nabití [[z_Atomy/K/Koordinovaný útok!\|Koordinovaného útoku!]] ([[z_Atomy/0-9/🔀\|🔀]]) je rovno Vaší [[z_Atomy/0-9/📖\|📖]]. Obnoví se během [[z_Atomy/0-9/🔋\|🔋]] (min. 1).
+Maximální počet nabití [[z_Atomy/K/Koordinovaný útok!\|Koordinovaného útoku!]] ([[z_Atomy/0-9/🔀\|🔀]]) je rovno Vaší [[z_Atomy/0-9/📖\|📖]]. Obnoví se během [[z_Atomy/0-9/🔋\|🔋]].
