--- a/src/site/notes/z_Atomy/0-9/⚙️.md
+++ b/src/site/notes/z_Atomy/0-9/⚙️.md
@@ -11,9 +11,9 @@ Kdykoli chce hrdina interagovat se světem, může chtít použít jednu ze svý
 
 
 
-## Moc (💪)
+## Nezdolnost (💪)
 Vaše surová fyzická síla a schopnost ji efektivně použít. 
-Využijte [[z_Atomy/0-9/⚙️\|⚙️]] **Moc** k zvedání těžkých předmětů, prorážení překážek, lezení, zápasení a provádění činů vyžadujících sílu a vytrvalost.
+Využijte [[z_Atomy/0-9/⚙️\|⚙️]] **Nezdolnost** k zvedání těžkých předmětů, prorážení překážek, lezení, zápasení a provádění činů vyžadujících sílu a vytrvalost.
 
 </div></div>
 
