--- a/src/site/notes/z_Atomy/0-9/❤️‍🔥.md
+++ b/src/site/notes/z_Atomy/0-9/❤️‍🔥.md
@@ -2,5 +2,5 @@
 {"dg-publish":true,"dg-permalink":"Vůle","permalink":"/Vůle/"}
 ---
 
-## ❤️‍🔥 = VŮLE
+## ❤️‍🔥 = Vůle
 Vaše síla osobnosti a moudrost, které ovlivňují Vaše interakce s přírodou a společností. Ovlivňuje Vaše [[z_Atomy/0-9/✨\|✨]], [[z_Atomy/0-9/⚙️\|⚙️]] [[z_Atomy/P/Příroda (❤️‍🔥)\|Příroda (❤️‍🔥)]], [[z_Atomy/V/Vnímání (❤️‍🔥)\|Vnímání (❤️‍🔥)]], [[z_Atomy/V/Vhled (❤️‍🔥)\|Vhled (❤️‍🔥)]] a [[z_Atomy/V/Vliv (❤️‍🔥)\|Vliv (❤️‍🔥)]] a [[z_Atomy/0-9/❗\|❗]][[z_Atomy/0-9/❤️‍🔥\|❤️‍🔥]].
