--- a/src/site/notes/z_Atomy/0-9/📖.md
+++ b/src/site/notes/z_Atomy/0-9/📖.md
@@ -2,5 +2,5 @@
 {"dg-publish":true,"dg-permalink":"Inteligence","permalink":"/Inteligence/"}
 ---
 
-## 📖 = INTELIGENCE
+## 📖 = Inteligence
 Váš intelekt, znalosti a rozumové schopnosti v oblastech mystiky, taktiky a mazanosti. Ovlivňuje [[z_Atomy/J/Jazyky\|Jazyky]], [[z_Atomy/0-9/✨\|✨]], používaní [[z_Atomy/K/Kouzelný svitek\|Kouzelných svitků]] a [[z_Atomy/K/Kouzelné hůlky\|Kouzelných hůlek]], [[z_Atomy/0-9/⚙️\|⚙️]] [[z_Atomy/M/Mystika (📖)\|Mystika (📖)]], [[z_Atomy/Z/Zkoumání (📖)\|Zkoumání (📖)]] a [[z_Atomy/H/Historie (📖)\|Historie (📖)]] a [[z_Atomy/0-9/❗\|❗]][[z_Atomy/0-9/📖\|📖]].
