Published multiple files

--- a/src/site/notes/z_Atomy/0-9/❗.md
+++ b/src/site/notes/z_Atomy/0-9/❗.md
@@ -3,7 +3,7 @@
 ---
 
 # ❗ = Záchranný hod
-Když svět hry ovlivňuje Hrdiny, **pro provedení záchranného hodu hoďte 1k20 a přidejte modifikace**. 
+Když svět hry ovlivňuje Hrdiny, **pro provedení záchranného hodu hoďte 1k20 a přidejte jednu základní [[z_Atomy/S/Statistiky\|Statistiku]]**.
 Každý záchranný hod má [[z_Atomy/0-9/📶\|📶]], který musí být dorovnán hodem a modifikátory pro **úspěch**, jinak se jedná o **neúspěch**. Hod "*přirozené*" 20 vždy uspěje! Bytost si může záměrně neuspět.
 
 - ❗[[z_Atomy/0-9/💪\|💪]] 
