--- a/src/site/notes/z_Atomy/0-9/❓.md
+++ b/src/site/notes/z_Atomy/0-9/❓.md
@@ -6,7 +6,8 @@
 Když chtějí Hrdinové ovlivňovat svět hry při provádění něčeho náročného (přesvědčování [[z_Atomy/N/NPC\|NPC]], odhalení skryté bytosti, odemykání zámku atd.) [[z_Atomy/0-9/🧙🏼‍♂️\|🧙🏼‍♂️]] může požádat hrdinu o provedení **kontroly dovednosti**. 
 
 **Pro provedení ❓ hoďte 1k20 a přidejte bonus dané [[z_Atomy/0-9/⚙️\|⚙️]] k výsledku.** 
-Výsledek se porovná s [[z_Atomy/0-9/📶\|📶]], který musí být dorovnán pro **úspěch**. Když je hodnota menší jedná se o **neúspěch**. [[z_Atomy/0-9/📶\|📶]] určuje [[z_Atomy/0-9/🧙🏼‍♂️\|🧙🏼‍♂️]] v závislosti na tom, co se pokoušíte udělat.
+Výsledek se porovná s [[z_Atomy/0-9/📶\|📶]], který musí být dorovnán pro **úspěch**. Když je hodnota menší jedná se o **neúspěch**. 
+[[z_Atomy/0-9/📶\|📶]] určuje [[z_Atomy/0-9/🧙🏼‍♂️\|🧙🏼‍♂️]] v závislosti na tom, co se pokoušíte udělat.
 
 > [!FAQ]- Pro [[z_Atomy/0-9/🧙🏼‍♂️\|🧙🏼‍♂️]]
 > **Odhalit [[z_Atomy/0-9/📶\|📶]] nebo ho nechat tajný?** Obvykle je stupeň obtížnosti skrytá informace pouze pro [[z_Atomy/0-9/🧙🏼‍♂️\|🧙🏼‍♂️]]. Existují však situace, kdy odhalení stupně obtížnosti před hodem může skutečně zvýšit dramatičnost okamžiku. Podívejte se do knihy [[z_Atomy/0-9/🧙🏼‍♂️\|🧙🏼‍♂️]] pro více informací o tom, kdy a jak vyvolat **kontrolu dovednosti**.
