Published multiple files

--- a/src/site/notes/z_Atomy/0-9/⏩.md
+++ b/src/site/notes/z_Atomy/0-9/⏩.md
@@ -4,4 +4,4 @@
 
 # ⏩ = Body Vánku
 Když se hází [[z_Atomy/0-9/🏁\|🏁]], získáte [[z_Atomy/0-9/🎯\|🎯]] **Bodů vánku** ([[z_Atomy/0-9/⏩\|⏩]]). 
-Můžete utratit 1[[z_Atomy/0-9/⏩\|⏩]]/[[z_Atomy/K/Kolo\|Kolo]] pro jeden [[z_Atomy/V/Výbuch rychlosti\|Výbuch rychlosti]] *zdarma* (**0** [[z_Atomy/A/Akce\|Akcí]]).
+Můžete utratit 1[[z_Atomy/0-9/⏩\|⏩]]/[[z_Atomy/K/Kolo\|Kolo]] pro jeden [[z_Atomy/V/Výbuch rychlosti\|Výbuch rychlosti]] [[z_Atomy/Z/Zdarma\|Zdarma]].
