--- a/src/site/notes/z_Atomy/0-9/♈.md
+++ b/src/site/notes/z_Atomy/0-9/♈.md
@@ -4,7 +4,7 @@
 
 # ♈ = Kostky Vzteku
 Pokud získáte **Kostku Vzteku** (♈), hoďte jí a odložte ji stranou. Přičítá se ke **každému [[z_Atomy/0-9/💪\|💪]] [[z_Atomy/0-9/⚔️\|⚔️]]**.
-Maximální počet ♈ je roven Vašemu [[z_Atomy/L/LVL\|LVL]] a zmizí, když Vaše **Zuřivost** skončí.
+Maximální počet ♈ je roven Vašemu [[z_Atomy/L/LVL\|LVL]] a zmizí, když Vaše **[[z_Atomy/Z/Zuřivost\|Zuřivost]]** skončí.
 
 Jak získáváte [[z_Atomy/U/Úrovně Berserka\|Úrovně Berserka]], Vaše ♈ rostou. 
 [[z_Atomy/L/LVL\|LVL]] 4 - k6
