--- a/src/site/notes/z_Atomy/0-9/♐.md
+++ b/src/site/notes/z_Atomy/0-9/♐.md
@@ -3,7 +3,7 @@
 ---
 
 # ♐ = Kostky Války
-Kdykoli se hází [[z_Atomy/0-9/🏁\|🏁]], získáte **Kostky Války** rovné Vaší [[z_Atomy/0-9/📖\|📖]]. Jednou za [[z_Atomy/0-9/⚔️\|⚔️]] můžete utratit jednu **Válečnou Kostku** pro provedení [[z_Atomy/V/Válečné Taktiky\|Válečné Taktiky]]. Jsou ztraceny na konci [[z_Atomy/S/Střetnutí\|Střetnutí]].
+Kdykoli se hází [[z_Atomy/0-9/🏁\|🏁]], získáte **Kostky Války** (♐) rovné Vaší [[z_Atomy/0-9/📖\|📖]]. Jednou za [[z_Atomy/0-9/⚔️\|⚔️]] můžete utratit jednu ♐ pro provedení [[z_Atomy/V/Válečné Taktiky\|Válečné Taktiky]]. ♐ jsou ztraceny na konci [[z_Atomy/S/Střetnutí\|Střetnutí]].
 
 Velikost je v základu **k6** a zvyšuje se na **určitých** [[z_Atomy/L/LVL\|LVL]].
 [[z_Atomy/L/LVL\|LVL]] 4 - k6
