--- a/src/site/notes/z_Atomy/0-9/⚜️.md
+++ b/src/site/notes/z_Atomy/0-9/⚜️.md
@@ -3,4 +3,4 @@
 ---
 
 # ⚜️ = Nabití Kladení rukou
-Maximální počet nabití [[z_Atomy/K/Kladení rukou\|Kladení rukou]] (⚜️) je rovno 5x Váš [[z_Atomy/L/LVL\|LVL]]. Obnoví se během [[z_Atomy/0-9/🔋\|🔋]].
+Maximální počet **nabití** [[z_Atomy/K/Kladení rukou\|Kladení rukou]] (⚜️) je rovno 5x Váš [[z_Atomy/L/LVL\|LVL]]. Obnoví se během [[z_Atomy/0-9/🔋\|🔋]].
