--- a/src/site/notes/z_Atomy/0-9/⛉.md
+++ b/src/site/notes/z_Atomy/0-9/⛉.md
@@ -3,4 +3,4 @@
 ---
 
 ### ⛉ = Střední brnění = Pouze kostky!
-Monstra se středním brněním ignorují všechny bonusy poškození. Utrží poškození pouze z hodu kostek.
+Monstra se **středním brněním** ignorují všechny bonusy poškození. Utrží poškození pouze z hodu kostek.
