--- a/src/site/notes/z_Atomy/0-9/⛊.md
+++ b/src/site/notes/z_Atomy/0-9/⛊.md
@@ -3,4 +3,4 @@
 ---
 
 ### ⛊ = Těžké brnění = Kostky/2
-Monstra s těžkým brněním ignorují bonusy poškození a utrží polovinu poškození z hodu kostek (zaokrouhleno nahoru).
+Monstra s **těžkým brněním** ignorují bonusy poškození a utrží polovinu poškození z hodu kostek (zaokrouhleno nahoru).
