--- a/src/site/notes/z_Atomy/0-9/✴️.md
+++ b/src/site/notes/z_Atomy/0-9/✴️.md
@@ -3,4 +3,4 @@
 ---
 
 # ✴️ = Nabití Svaté záře
-Maximální počet nabití [[z_Atomy/S/Svatá záře\|Svaté záře]] (✴️) je Vaší [[z_Atomy/0-9/❤️‍🔥\|❤️‍🔥]]. Obnoví se během [[z_Atomy/0-9/🔋\|🔋]].
+Maximální počet **nabití** [[z_Atomy/S/Svatá záře\|Svaté záře]] (✴️) je Vaší [[z_Atomy/0-9/❤️‍🔥\|❤️‍🔥]]. Obnoví se během [[z_Atomy/0-9/🔋\|🔋]].
