--- a/src/site/notes/z_Atomy/0-9/❇️.md
+++ b/src/site/notes/z_Atomy/0-9/❇️.md
@@ -3,7 +3,7 @@
 ---
 
 # ❇️=Nabití Lovecké horečky
-V základu získáte +1[[z_Atomy/0-9/❇️\|❇️]], když:
+Získáte **1 Nabití Lovecké horečky** ([[z_Atomy/0-9/❇️\|❇️]]), když:
 - se hází [[z_Atomy/0-9/🏁\|🏁]]
 - [[z_Atomy/0-9/⚔️\|⚔️]] na blízko na [[z_Atomy/K/Kořist\|Kořist]] 
 - Vaše [[z_Atomy/K/Kořist\|Kořist]] zemře
