--- a/src/site/notes/z_Atomy/0-9/🌀.md
+++ b/src/site/notes/z_Atomy/0-9/🌀.md
@@ -3,5 +3,5 @@
 ---
 
 ## 🌀 = Mana
-**Kouzla** vyžadují část životní síly: **Manu**. Cena kouzla v maně odpovídá jeho **Stupni**. 
-**Triky** a **Tríčky** nestojí žádnou manu.
+**Kouzla** vyžadují část životní síly: **Manu**. Cena kouzla v **maně** odpovídá jeho **Stupni**. 
+**Triky** a **Tríčky** nestojí žádnou **manu**.
