--- a/src/site/notes/z_Atomy/0-9/🐾.md
+++ b/src/site/notes/z_Atomy/0-9/🐾.md
@@ -3,4 +3,4 @@
 ---
 
 # 🐾 = Nabití Divotvaru
-Maximální počet nabití [[z_Atomy/D/Divotvar\|Divotvaru]] (🐾) je rovno Vaší [[z_Atomy/0-9/❤️‍🔥\|❤️‍🔥]]. Obnoví se během [[z_Atomy/0-9/🔋\|🔋]].
+Maximální počet **nabití** [[z_Atomy/D/Divotvar\|Divotvaru]] (🐾) je rovno Vaší [[z_Atomy/0-9/❤️‍🔥\|❤️‍🔥]]. Obnoví se během [[z_Atomy/0-9/🔋\|🔋]].
