--- a/src/site/notes/z_Atomy/0-9/🔔.md
+++ b/src/site/notes/z_Atomy/0-9/🔔.md
@@ -3,4 +3,4 @@
 ---
 
 # 🔔 = Nabití Básníkovy inspirace
-Maximální počet nabití [[z_Atomy/B/Básníkova Inspirace\|Básníkovy inspirace]] (🔔) je rovno 2x Vaší [[z_Atomy/0-9/❤️‍🔥\|❤️‍🔥]]. Obnoví se během [[z_Atomy/0-9/🔋\|🔋]].
+Maximální počet **nabití** [[z_Atomy/B/Básníkova Inspirace\|Básníkovy inspirace]] (🔔) je rovno 2x[[z_Atomy/0-9/❤️‍🔥\|❤️‍🔥]]. Obnoví se během [[z_Atomy/0-9/🔋\|🔋]].
